# synthesis

./: .gitignore  CHANGELOG.md  synthesis.cabal  synthesis.org
src/: Synthesis.hs
